# pypsexec

./: .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  jordan.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
build_helpers/: lib.sh  win-setup.ps1
pypsexec/: __init__.py  client.py  exceptions.py  exec.py  modified_smbprotocol_connection.py  modified_smbprotocol_transport.py  paexec.py  pipe.py  rpc.py  scmr.py  wrap.py
pypsexec/__pyinstaller/: hook-pypsexec.py
src/pypsexec/: client.py  rpc.py  scmr.py
tests/: client_exec_mod_test.py  constraints.txt  test_client.py  test_exceptions.py  test_paexec.py  test_pipe.py  test_rpc.py  test_scmr.py
